--- a/app/src/main/res/layout/log_adapter_item_view.xml
+++ b/app/src/main/res/layout/log_adapter_item_view.xml
@@ -2,8 +2,10 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-
+    android:layout_height="wrap_content"
+    android:layout_margin="8sp"
+    android:padding="2dp"
+    android:background="@drawable/border_layout"
     >
 
     <TextView
@@ -12,8 +14,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="title"
-        android:textColor="@android:color/black"
-        android:textSize="32sp"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
         android:textStyle="bold"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -25,8 +27,8 @@
         android:layout_height="wrap_content"
         android:layout_margin="10dp"
         android:text="amount"
-        android:textColor="@android:color/black"
-        android:textSize="32sp"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
         android:textStyle="bold"
         android:gravity="right"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +42,7 @@
         android:layout_marginLeft="10dp"
         android:text="description"
         android:textSize="24dp"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/title" />
 
@@ -51,8 +54,14 @@
         android:layout_marginLeft="10dp"
         android:text="date"
         android:textSize="16dp"
+        android:textColor="@android:color/white"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/description" />
 
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="1dp"
+        app:layout_constraintTop_toTopOf="parent"
+        ></LinearLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
