--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -60,9 +60,9 @@
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
-        app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+        app:layout_constraintTop_toBottomOf="@+id/toolbar_id" />
 
     <include
-        android:id="@+id/toolbar"
+        android:id="@+id/toolbar_id"
         layout="@layout/toolbar" />
 </androidx.constraintlayout.widget.ConstraintLayout>
